--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^17.3.0",
     "bootstrap": "^5.3.3",
     "firebase": "^10.11.1",
+    "ngx-toastr": "^18.0.0",
     "package": "^1.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
