--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "firebase": "^10.11.1",
+    "ng2-search-filter": "^0.5.1",
     "ngx-toastr": "^18.0.0",
     "package": "^1.0.1",
     "rxjs": "~7.8.0",
